fix(menu): department/category tree and add column wrap on subCtagories

--- a/styles/scss/gbarbosa.mega-menu.scss
+++ b/styles/scss/gbarbosa.mega-menu.scss
@@ -109,8 +109,12 @@
               top: 115px;
               max-width: 840px;
               .menuSubCategoryColunm {
-                flex-direction: column;
                 margin-top: 70px;
+                flex-flow: column wrap;
+                height: 100%;
+                width: 100%;
+                display: flex;
+                max-width: 500px;
                 .menuSubCategoryWrapper {
                   padding: 10px 0;
                   .menuSubCategoryLink {
@@ -218,10 +222,10 @@
       }
       .menuDepartmentIcon {
         margin-right: 20px;
-        width: 34px;
-        height: 32px;
-        filter: invert(17%) sepia(96%) saturate(3675%) hue-rotate(348deg)
-          brightness(95%) contrast(95%);
+        /*         width: 34px;
+        height: 32px; */
+        filter: invert(12%) sepia(173%) saturate(8726%) hue-rotate(359deg)
+          brightness(152%) contrast(362%);
       }
     }
   }
